get-serivce not on linux. removed from notebook

--- a/__tests__/GoodNotebooks/testPSExcel.ipynb
+++ b/__tests__/GoodNotebooks/testPSExcel.ipynb
@@ -17,7 +17,7 @@
         {
             "cell_type": "code",
             "source": [
-                "get-service | select -first 10 Status, Name, DisplayName"
+                "#get-service | select -first 10 Status, Name, DisplayName"
             ],
             "metadata": {
                 "azdata_cell_guid": "d89e0ca2-444f-474f-92ab-68e2dde95358"
